<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:tools="http://schemas.android.com/tools"
    tools:shrinkMode="strict" >
    <string name="app_name">Gail Connect v3</string>
    <string name="title_home">Home</string>
    <string name="title_contacts">Contacts</string>
    <string name="title_news">News</string>
    <string name="account_type">com.nirwal.gailconnect</string>


    <array name="contact_filter_choice">
        <item>By location and department</item>
        <item>By location</item>
        <item>All</item>
    </array>

    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


    <string name="last_updated_on">Data last updated on %1s</string>
    <string name="wish_all">Wish all</string>

    //connection tab
    <string name="no_connection">No connection</string>
    <string name="back_online">Back online</string>
    <string name="user_photo">User photo</string>

    //Info and Error
    <string name="loading_please_wait">Loading \nPlease wait…</string>
    <string name="error_plz_install_browser">"No application can handle this request.\n"
                    + " Please install a Web Browser"</string>
    <string name="search_here">Search here</string>
    <string name="filter_contact">Filter contact</string>
    <string name="export_contacts">Export contacts</string>
    <string name="contact_search_button">Contact search Button</string>
    <string name="option_button">Option Button</string>
    <string name="contacts">Contacts</string>
    <string name="back_button">Back button</string>

    <!-- Preference Titles -->
    <string name="setting_header">Settings</string>
    <string name="sync_header">Sync</string>

    <!-- Setting Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="theme_title">Theme</string>
    <string name="sync_title">Sync data periodically</string>
    <string name="birthday_default_msg_title">Birthday wishes message</string>
    <string name="birthday_wish_default_msg">Wishing you a wonderful year\n
        of good health, happiness and\nsuccess!</string>


    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="welcome_txt">Welcome\n%s</string>
    <string name="btn_copy_desc">Button copy</string>
    <string name="profile">Profile</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_wish_message">Message</string>


</resources>


